--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
+        <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
+            <li class="u-grey"><href="photography.html">Photography</a></li>
 
-              <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
-                  <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
 
 
         </div>
@@ -55,30 +55,30 @@
       <div class="container">
         <div class="row">
           <div id="portfolio" class="twelve column">
-            <div class="row end" style="margin-top:40px;">
+            <div class="row end" style="margin-top:90px;">
               <div class= "four columns">
                 <img class="avatar" src="images/headshot2.jpg">
-              </a>
 
 
 
 
+<!--social media icons-->
             <ul class="social-media-container">
               <a href="#">
                  <div class="buttonz">
-                   <img src="images/medium.svg" height="31" width="31" alt="" id="img_2"/>
+                   <img src="images/medium.svg" height="25" width="25" alt="" id="img_2"/>
                  </div><!--end of button-->
                  </a>
 
                  <a href="https://github.com/jintanamc">
                     <div class="buttonz">
-                      <img src="images/github.svg" height="31" width="31" alt="" id="img_2"/>
+                      <img src="images/github.svg" height="25" width="25" alt="" id="img_2"/>
                     </div><!--end of button-->
                     </a>
 
                     <a href="https://www.behance.net/jc274746af">
                        <div class="buttonz">
-                         <img src="images/behance.svg" height="31" width="31" alt="" id="img_2"/>
+                         <img src="images/behance.svg" height="25" width="25" alt="" id="img_2"/>
                        </div><!--end of button-->
                        </a>
 
@@ -86,23 +86,23 @@
 
                        <a href="https://www.linkedin.com/in/jintana-cunningham/">
                           <div class="buttonz">
-                            <img src="images/linkedin.svg" height="31" width="31" alt="" id="img_2"/>
+                            <img src="images/linkedin.svg" height="25" width="25" alt="" id="img_2"/>
                           </div><!--end of button-->
                           </a>
 
                    </ul>
-
-
-
-
               </div>
-              <div class="six offset-by-two columns" >
+
+
+              <div class="six offset-by-two columns" style="margin-top: -70px">
                   <h5 class="u-dark" style="margin-bottom: 20px">About</h5>
                 <h6 style="margin-bottom: 20px">Hello!
                 </h6>
                 <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a sophomore at Cornell studying Information Science with an expected minor in business and Japanese.
                 </h6>
-                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University. </a>
+                <h6 style="margin-bottom: 20px"> I taught myself the tools to make this website in the summer of 2017, and I have been absorbed in the world of technology ever since.
+                </h6>
+                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University, as well as a representative of <a href="http://www.youresearch.org/">YouResearch </a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
                 </h6>
