--- a/index.html
+++ b/index.html
@@ -42,13 +42,38 @@
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
-            <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
+          <li class="u-grey"><a href="photography.html">Photography</a></li>
 
           </ul>
         </div>
       </div>
     </div>
 </div>
+
+<!-- 
+<div class="section-work" style="background-color:#FCFCFC">
+      <div class="container">
+        <div class="row">
+          <div id="portfolio" class="twelve column">
+            <div class="row card" style="margin-top:40px;">
+              <div class= "four columns">
+                <a href="groupme.html">
+
+                <img class="mockup" src="images/groupme.png">
+              </a>
+              </div>
+              <div class="six offset-by-two columns" >
+                  <h5 class="u-dark" style="margin-bottom: 10px">GroupMe Case Study</h5>
+                <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
+                </h6>
+                <h6 style="margin-bottom: 20px"> Redesign concept for GroupMe.   </h6>
+                <a class="button" href="https://medium.com/@jc2747/groupme-concept-a448d9895d97">View</a>
+              </div>
+            </div>
+          </div>
+          </div>
+          </div>
+          </div> -->
 
 
 
@@ -67,7 +92,7 @@
                   <h5 class="u-dark" style="margin-bottom: 10px">YouResearch Redesign</h5>
                 <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
                 </h6>
-                <h6 style="margin-bottom: 20px"> Implemented Website Redesign for a student-run non-profit.   </h6>
+                <h6 style="margin-bottom: 20px"> Implemented website redesign for a student-run non-profit.   </h6>
                 <a class="button" href="yr.html">View</a>
               </div>
             </div>
@@ -186,51 +211,34 @@
           </div>
         </div>
 
-      <!-- </div>
 
-<div class="section-work" style="background-color:#FCFCFC">
-=======
-      </div>
 
-<!--<div class="section-work" style="background-color:#FCFCFC">
->>>>>>> 12839ac928b425b0897b67d75720094ceb562783
+
+
+        <div class="section-work" style="background-color:#FCFCFC">
         <div class="container">
           <div class="row">
             <div id="portfolio" class="twelve column">
-              <div class="row end" style="margin-top:40px">
+                <div class="row card" style="margin-top:40px">
                 <div class= "four columns">
-                  <img class="mockup" src="images/wireframe.png">
+
+                  <img class="mockup" src="images/kyoto.png">
+
                 </a>
                 </div>
                 <div class="six offset-by-two columns" >
-<<<<<<< HEAD
-                    <h5 class="u-dark" style="margin-bottom: 10px">Freelance</h5>
-=======
-                    <h5 class="u-dark" style="margin-bottom: 10px">Other Work</h5>
->>>>>>> 12839ac928b425b0897b67d75720094ceb562783
-                  <h6 class="u-grey" style="margin-bottom: 20px">Sep 2017 to Present
+                    <h5 class="u-dark" style="margin-bottom: 10px">Other Projects</h5>
+                  <h6 class="u-grey" style="margin-bottom: 20px">Always
                   </h6>
-                  <h6 style="margin-bottom: 20px">I offer my skills and services to the local community. I am always looking for the latest challenge and task to take on.
+                  <h6 style="margin-bottom: 20px">Art and et cetera.
                   </h6>
-<<<<<<< HEAD
-                  <h6 style="margin-bottom: 20px">Coming soon.
-                </h6>
-=======
-                  <h6 style="margin-bottom: 20px">Coming soon.
-                </h6>
->>>>>>> 12839ac928b425b0897b67d75720094ceb562783
+
+                  <a class="button" href="other.html">View</a>
                 </div>
               </div>
             </div>
+            </div>
           </div>
-        </div>
-      </div> -->
-
-
-
-
-
-
 
 
 
