--- a/other.html
+++ b/other.html
@@ -37,7 +37,6 @@
       <div class="row">
         <div class="twelve columns">
           <a href="index.html"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
-          <h4 style="margin-bottom:35px">Photography.</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
@@ -48,17 +47,19 @@
       </div>
     </div>
 </div>
+<br />
+ <h5 class="u-dark info" style="margin-bottom: 20px">Other Work</h5>
+
+<div class="info">
+
+  <img class = "center" src="images/kyoto.png" style="margin-bottom: 10px">
+  <p style="margin-bottom: 20px">This was my first time experimenting with low-poly art.
+</p>
 
 
- <img class = "horiz-right" src="images/tokyo.jpg" width="450">
-
- <img class = "horiz-left" src="images/sweet.jpg" width="450">
-
-  <img class="vert-left" src="images/amy.jpg" width="300">
- <img class="horiz-right" src="images/korea.jpg">
-  <img class="horiz-left" src="images/island2.jpg">
-  <img class="vert-right" src="images/leaves.jpg">
-  <img class="horiz-left" src="images/falls.jpg">
+<br /><br />
+<h6><strong>More Coming Soon!</strong></h6>
+</div>
 
 
 </body>
