--- a/yr.html
+++ b/yr.html
@@ -44,7 +44,7 @@
             <li class="u-grey"><a href=about.html>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
-          
+
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
   <img src="images/youresearch.png" height="310" width="550">
   <br />
 <p>
-  Using Semantic UI as a framework, I exercised my skills in HTML/CSS, with a touch of PHP and Javascript to create the new website. Rebranding an established non-profit was a great way for me to practice web development and branding.</p>
+  Using Semantic UI as a framework, I exercised my skills in HTML/CSS, with a touch of PHP and Javascript to create the new website. I became more comfortable using Git for version control as well. Rebranding an established non-profit was a great way for me to practice web development and branding.</p>
 </p>
 <br /><br /><br />
 <h5>Check out the live site: <a href="youresearch.org">Youresearch.org</a> </h5>
