--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@
 
 <!--social media icons-->
             <ul class="social-media-container">
-              <a href="#">
+              <!-- <a href="#">
                  <div class="buttonz">
                    <img src="images/medium.svg" height="25" width="25" alt="" id="img_2"/>
                  </div><!--end of button-->
-                 </a>
+               <!-- </a> --> 
 
                  <a href="https://github.com/jintanamc">
                     <div class="buttonz">
