--- a/yr.html
+++ b/yr.html
@@ -103,7 +103,7 @@
   Using Semantic UI as a framework, I exercised my skills in HTML/CSS, with a touch of PHP and Javascript to create the new website. I became more comfortable using Git for version control as well. Rebranding an established non-profit was a great way for me to practice web development and branding.</p>
 </p>
 <br /><br /><br />
-<h5>Check out the live site: <a href="youresearch.org">Youresearch.org</a> </h5>
+<h5>Check out the live site: <a href="http://youresearch.org/">Youresearch.org</a> </h5>
 <br /><br /><br /><br />
 
 </body>
