--- a/other.html
+++ b/other.html
@@ -53,9 +53,13 @@
 <div class="info">
 
   <img class = "center" src="images/kyoto.png" style="margin-bottom: 10px">
-  <p style="margin-bottom: 20px">This was my first time experimenting with low-poly art.
+  <p style="margin-bottom: 20px">I wanted to recreate a memory from my childhood but render it in a geometric style. This was my first time experimenting with low-poly art, but be on the lookout for more in the future!
 </p>
 
+
+<img src="images/art.jpg" style="margin-bottom: 10px;" height="480" width="550">
+<p style="margin-bottom: 20px"> Quick rainy day sketch of a girl.
+</p>
 
 <br /><br />
 <h6><strong>More Coming Soon!</strong></h6>
