--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                  <div class="buttonz">
                    <img src="images/medium.svg" height="25" width="25" alt="" id="img_2"/>
                  </div><!--end of button-->
-               <!-- </a> --> 
+               <!-- </a> -->
 
                  <a href="https://github.com/jintanamc">
                     <div class="buttonz">
@@ -120,7 +120,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> I taught myself the tools to make this website in the summer of 2017, and I have been absorbed in the world of technology ever since.
                 </h6>
-                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University, as well as a representative of <a href="http://www.youresearch.org/">YouResearch </a>
+                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University, as well as a representative of </a><a href="http://www.youresearch.org/">YouResearch </a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
                 </h6>
