--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="twelve columns">
           <a href="index.html"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
-          <h4 style="margin-bottom:35px">I'm an aspiring product designer from Kyoto studying Information Science at Cornell.</h4>
+          <h4 style="margin-bottom:35px">I'm an aspiring product designer from New York studying Information Science at Cornell.</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
