--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> I taught myself the tools to make this website in the summer of 2017, and I have been absorbed in the world of technology ever since.
                 </h6>
-                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a representative of <a href="http://www.youresearch.org/">YouResearch </a>
+                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a representative of <a href="http://www.youresearch.org/">YouResearch. </a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
                 </h6>
