--- a/cusd.html
+++ b/cusd.html
@@ -38,12 +38,12 @@
     <div class="container" style="margin-top: 120px; margin-bottom: 72px">
       <div class="row">
         <div class="twelve columns">
-          <a href="index.html"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
+          <a href="index"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
           <ul class="header-links--inline">
-            <li class="u-grey"><a href=index.html>Portfolio</a></li>
-            <li class="u-grey"><a href=about.html>About</a></li>
+            <li class="u-grey"><a href=index>Portfolio</a></li>
+            <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
-            <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
+            <li class="u-grey"><a target="_blank" href="photography">Photography</a></li>
             <li class="u-grey"><a target="_blank" href="hhttps://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
             <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
         </div>
