--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@
           </div>
           </div>
           </div> -->
+          <div class="section-work" style="background-color:#FCFCFC">
+                <div class="container">
+                  <div class="row">
+                    <div id="portfolio" class="twelve column">
+                      <div class="row card" style="margin-top:40px;">
+                        <div class= "four columns">
+                          <a href="yr">
+
+                          <img class="mockup" src="images/iqvia.png">
+                        </a>
+                        </div>
+                        <div class="six offset-by-two columns" >
+                            <h5 class="u-dark" style="margin-bottom: 10px">IQVIA</h5>
+                          <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
+                          </h6>
+                          <h6 style="margin-bottom: 20px"> UX Engineer Intern for healthcare   </h6>
+                          <!-- <a class="button" href="yr">View</a> -->
+                              <h6 style="margin-bottom: 20px">Report coming soon.
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
 
 
 
@@ -110,7 +134,7 @@
                 <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
                 </h6>
                 <h6 style="margin-bottom: 20px"> Implemented website redesign for a student-run non-profit.   </h6>
-                <a class="button" href="yr">View</a>
+                <a class="button" href="yr.html">View</a>
               </div>
             </div>
           </div>
@@ -194,7 +218,7 @@
                         <h6 style="margin-bottom: 20px">On campus I collaborate with a diverse group of students to create a fashion magazine.
 
                         </h6>
-                        <a class="button" href="thread">View</a>
+                        <a class="button" href="thread.html">View</a>
                       </div>
                     </div>
                   </div>
@@ -250,7 +274,7 @@
                   <h6 style="margin-bottom: 20px">Art and et cetera.
                   </h6>
 
-                  <a class="button" href="other">View</a>
+                  <a class="button" href="other.html">View</a>
                 </div>
               </div>
             </div>
