--- a/other.html
+++ b/other.html
@@ -61,6 +61,12 @@
 <p style="margin-bottom: 20px"> Quick rainy day sketch of a girl.
 </p>
 
+
+
+<img src="images/poster.png" style="margin-bottom: 10px;" height="480" width="550">
+<p style="margin-bottom: 20px"> Poster for a design tour I helped host during my internship at IQVIA.
+</p>
+
 <br /><br />
 <h6><strong>More Coming Soon!</strong></h6>
 </div>
