--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Jintana Cunningham</title>
-  <meta name="description" content="Aspiring Product Designer">
+  <meta name="description" content="Aspiring Designer">
   <meta property="og:image" content="images/favicon.png">
   <meta property="og:title" content="Jintana Cunningham">
   <meta name="author" content="">
