--- a/about.html
+++ b/about.html
@@ -57,10 +57,10 @@
         <div class="twelve columns">
           <a href="index"><h2 class="u-blue" style="margin-bottom:35px">Jintana Cunningham</h2></a>
           <ul class="header-links--inline">
-            <li class="u-grey"><a href="index.html">Portfolio</a></li>
+            <li class="u-grey"><a href="index">Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
         <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
-            <li class="u-grey"><href="photography">Photography</a></li>
+            <li class="u-grey"><a href="photography">Photography</a></li>
 
 
 
@@ -116,7 +116,7 @@
                   <h5 class="u-dark" style="margin-bottom: 20px">About</h5>
                 <h6 style="margin-bottom: 20px">Hello!
                 </h6>
-                <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a sophomore at Cornell studying Information Science with an expected minor in business and Japanese.
+                <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a junior at Cornell studying Information Science with an expected minor in business and Japanese.
                 </h6>
                 <h6 style="margin-bottom: 20px"> I taught myself the tools to make this website in the summer of 2017, and I have been absorbed in the world of technology ever since.
                 </h6>
