--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <h5 class="u-dark" style="margin-bottom: 10px">YouResearch Redesign</h5>
                 <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
                 </h6>
-                <h6 style="margin-bottom: 20px"> Implemented website redesign for a student-run non-profit.   </h6>
+                <h6 style="margin-bottom: 20px">  Redesigned website for a student-run non-profit.   </h6>
                 <a class="button" href="yr.html">View</a>
               </div>
             </div>
