--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="index"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
           <h4 style="margin-bottom:35px">I'm an aspiring UX designer from New York studying Information Science at Cornell.</h4>
           <ul class="header-links--inline">
-            <li class="u-grey"><a href=index.html>Portfolio</a></li>
+            <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
           <li class="u-grey"><a href="photography">Photography</a></li>
