remove buttons for now

--- a/about.html
+++ b/about.html
@@ -81,34 +81,29 @@
 
 
 <!--social media icons-->
-            <ul class="social-media-container">
-              <!-- <a href="#">
-                 <div class="buttonz">
-                   <img src="images/medium.svg" height="25" width="25" alt="" id="img_2"/>
-                 </div><!--end of button-->
-               <!-- </a> -->
+            <!-- <ul class="social-media-container">
+
 
                  <a href="https://github.com/jintanamc">
                     <div class="buttonz">
                       <img src="images/github.svg" height="25" width="25" alt="" id="img_2"/>
-                    </div><!--end of button-->
+                    </div>
                     </a>
 
                     <a href="https://www.behance.net/jc274746af">
                        <div class="buttonz">
                          <img src="images/behance.svg" height="25" width="25" alt="" id="img_2"/>
-                       </div><!--end of button-->
+                       </div>
+
                        </a>
-
-
 
                        <a href="https://www.linkedin.com/in/jintana-cunningham/">
                           <div class="buttonz">
                             <img src="images/linkedin.svg" height="25" width="25" alt="" id="img_2"/>
-                          </div><!--end of button-->
+                          </div>
                           </a>
 
-                   </ul>
+                   </ul> -->
               </div>
 
 
