--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <h6 style="margin-bottom: 20px">On campus I collaborate with a diverse group of students to create a fashion magazine.
 
                         </h6>
-                        <a class="button" href="thread.html">View</a>
+                        <a class="button" href="thread">View</a>
                       </div>
                     </div>
                   </div>
@@ -274,7 +274,7 @@
                   <h6 style="margin-bottom: 20px">Art and et cetera.
                   </h6>
 
-                  <a class="button" href="other.html">View</a>
+                  <a class="button" href="other">View</a>
                 </div>
               </div>
             </div>
