--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div id="portfolio" class="twelve column">
                       <div class="row card" style="margin-top:40px;">
                         <div class= "four columns">
-                          <a href="yr">
+                          <!-- <a href="yr"> -->
 
                           <img class="mockup" src="images/iqvia.png">
                         </a>
