--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                             <h5 class="u-dark" style="margin-bottom: 10px">IQVIA</h5>
                           <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                           </h6>
-                          <h6 style="margin-bottom: 20px"> UX Engineer Intern for healthcare   </h6>
-                          <!-- <a class="button" href="yr">View</a> -->
-                              <h6 style="margin-bottom: 20px">Report coming soon.
+                          <h6 style="margin-bottom: 20px"> UX Engineer Intern for healthcare consulting organization.  </h6>
+                          <a class="button" href="iqvia">View</a>
+                              <h6 style="margin-bottom: 20px">Report coming soon. </h6>
                         </div>
                       </div>
                     </div>
