--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div id="portfolio" class="twelve column">
                       <div class="row card" style="margin-top:40px;">
                         <div class= "four columns">
-                          <!-- <a href="yr"> -->
+                          <a href="iqvia">
 
                           <img class="mockup" src="images/iqvia.png">
                         </a>
@@ -108,7 +108,7 @@
                           </h6>
                           <h6 style="margin-bottom: 20px"> UX Engineer Intern for healthcare consulting organization.  </h6>
                           <a class="button" href="iqvia">View</a>
-                              <h6 style="margin-bottom: 20px">Report coming soon. </h6>
+
                         </div>
                       </div>
                     </div>
