remove extension on index

--- a/thread.html
+++ b/thread.html
@@ -55,7 +55,7 @@
         <div class="twelve columns">
           <a href="index"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
           <ul class="header-links--inline">
-            <li class="u-grey"><a href=index.html>Portfolio</a></li>
+            <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="photography">Photography</a></li>
