--- a/photography.html
+++ b/photography.html
@@ -54,7 +54,7 @@
           <a href="index"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
           <h4 style="margin-bottom:35px">Photography.</h4>
           <ul class="header-links--inline">
-            <li class="u-grey"><a href=index.html>Portfolio</a></li>
+            <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
             <li class="u-grey"><a href="photography">Photography</a></li>
