--- a/iqvia.html
+++ b/iqvia.html
@@ -58,6 +58,9 @@
   Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
 </p>
 
+<br />
+<img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="460">
+
 
 
 </body>
