--- a/hackathon.html
+++ b/hackathon.html
@@ -50,17 +50,22 @@
     </div>
 </div>
 
-<div class="header"><h3>IQVIA</h3></div>
+<div class="header"><h3>IQVIA Hackathon: VIA</h3></div>
 <div class="info"
-<p>
-  This summer I had the privilege to work at IQVIA as a UX Engineer Intern. Through my 10 week internship I worked on various projects, participated and won a hackathon, and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
-
-  Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
+<p> <b>Overview:</b> As patients manage their own health and illnesses, many wonder how to get a copy of their health data to share with thier physicians,
+  store in their own apps, provide data to support research, link to their genomic data, or have on hand just in case.  The end result of this effort should be a concept for a technology solution that enables patients to own and securely share their health data.
 </p>
 
-<br />
-<img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
+<p> <b>Our solution:</b>
+We created VIA, a personal and holistic approach to managing health information. It allows for customized health tracking, assessments, and notifications, as well as easy communication of health data with personal physicians. </p>
 
+
+<p><b>Marketplace Research: </b> The two major players in the market are Apple Health and Google Fit.</p>
+
+<br />
+<img src="images/hackathon.png" style="margin-bottom: 10px;" height="300" width="510">
+<p style="margin-bottom: 20px"> Screens for our Apple Watch prototype
+</p>
 
 
 </body>
