--- a/index.html
+++ b/index.html
@@ -91,6 +91,34 @@
           </div>
           </div>
           </div> -->
+
+          <div class="section-work" style="background-color:#FCFCFC">
+                <div class="container">
+                  <div class="row">
+                    <div id="portfolio" class="twelve column">
+                      <div class="row card" style="margin-top:40px;">
+                        <div class= "four columns">
+                          <a href="iqvia">
+
+                          <img class="mockup" src="images/iqvia.png">
+                        </a>
+                        </div>
+                        <div class="six offset-by-two columns" >
+                            <h5 class="u-dark" style="margin-bottom: 10px">IQVIA Hackathon</h5>
+                          <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
+                          </h6>
+                          <h6 style="margin-bottom: 20px"> VIA.  </h6>
+                          <a class="button" href="iqvia">View</a>
+
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+
+
+
           <div class="section-work" style="background-color:#FCFCFC">
                 <div class="container">
                   <div class="row">
@@ -116,6 +144,30 @@
                     </div>
                     </div>
 
+                    <!-- <div class="section-work" style="background-color:#FCFCFC">
+                          <div class="container">
+                            <div class="row">
+                              <div id="portfolio" class="twelve column">
+                                <div class="row card" style="margin-top:40px;">
+                                  <div class= "four columns">
+                                    <a href="info4340">
+
+                                    <img class="mockup" src="images/info4340.png">
+                                  </a>
+                                  </div>
+                                  <div class="six offset-by-two columns" >
+                                      <h5 class="u-dark" style="margin-bottom: 10px">INFO4340</h5>
+                                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
+                                    </h6>
+                                    <h6 style="margin-bottom: 20px"> Software  </h6>
+                                    <a class="button" href="info4340">View</a>
+
+                                  </div>
+                                </div>
+                              </div>
+                              </div>
+                              </div>
+                              </div> -->
 
 
 <div class="section-work" style="background-color:#FCFCFC">
