--- a/info4340.html
+++ b/info4340.html
@@ -50,19 +50,15 @@
     </div>
 </div>
 
-<div class="header"><h3>IQVIA</h3></div>
+<div class="header"><h3>INFO4340: UX and Software Development Studio</h3></div>
 <div class="info"
-<p>
-  This summer I had the privilege to work at IQVIA as a UX Engineer Intern. Through my 10 week internship I worked on various projects, participated in a hackathon, and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
-
-  Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
-</p>
+<p>In this course students gain experience conducting user research, designing user interfaces, build a working prototype, and conduct user testing. </p>
 
 <br />
-<img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
-
-<p style="margin-bottom: 20px"> Squad
+<img src="images/hackathon.png" style="margin-bottom: 10px;" height="300" width="510">
+<p style="margin-bottom: 20px"> Screens for our Apple Watch prototype
 </p>
+
 
 </body>
 </html>
