--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class= "four columns">
                           <a href="iqvia">
 
-                          <img class="mockup" src="images/iqvia.png">
+                          <img class="mockup" src="images/hackathon1.png">
                         </a>
                         </div>
                         <div class="six offset-by-two columns" >
