--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
           </div> -->
 
-          <div class="section-work" style="background-color:#FCFCFC">
+          <!-- <div class="section-work" style="background-color:#FCFCFC">
                 <div class="container">
                   <div class="row">
                     <div id="portfolio" class="twelve column">
@@ -115,7 +115,7 @@
                     </div>
                     </div>
                     </div>
-                    </div>
+                    </div> -->
 
 
 
