--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
           </div>
           </div> -->
 
-          <!-- <div class="section-work" style="background-color:#FCFCFC">
+          <div class="section-work" style="background-color:#FCFCFC">
                 <div class="container">
                   <div class="row">
                     <div id="portfolio" class="twelve column">
                       <div class="row card" style="margin-top:40px;">
                         <div class= "four columns">
-                          <a href="iqvia">
+                          <!-- <a href="iqvia"> -->
 
-                          <img class="mockup" src="images/hackathon1.png">
+                          <img style="margin-bottom: 10px;" height="200" width="150" src="images/hackathon1.png">
                         </a>
                         </div>
                         <div class="six offset-by-two columns" >
@@ -108,14 +108,15 @@
                           <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                           </h6>
                           <h6 style="margin-bottom: 20px"> VIA.  </h6>
-                          <a class="button" href="iqvia">View</a>
+                          <h6 style="margin-bottom: 20px">Report coming soon.
+                          </h6>
 
                         </div>
                       </div>
                     </div>
                     </div>
                     </div>
-                    </div> -->
+                    </div>
 
 
 
