--- a/index.html
+++ b/index.html
@@ -92,6 +92,38 @@
           </div>
           </div> -->
 
+
+
+
+          <div class="section-work" style="background-color:#FCFCFC">
+                <div class="container">
+                  <div class="row">
+                    <div id="portfolio" class="twelve column">
+                      <div class="row card" style="margin-top:40px;">
+                        <div class= "four columns">
+                          <!-- <a href="iqvia"> -->
+
+                          <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png">
+                        </a>
+                        </div>
+                        <div class="six offset-by-two columns" >
+                            <h5 class="u-dark" style="margin-bottom: 10px">School Work</h5>
+                          <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
+                          </h6>
+                          <h6 style="margin-bottom: 20px"> Projects from Human-Computer Interaction, User Experience + Software Engineering Studio, and more.  </h6>
+                          <h6 style="margin-bottom: 20px">Coming soon.
+                          </h6>
+
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+
+
+
+
           <div class="section-work" style="background-color:#FCFCFC">
                 <div class="container">
                   <div class="row">
