--- a/iqvia.html
+++ b/iqvia.html
@@ -58,11 +58,22 @@
   Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
 </p>
 
+
+
+
 <br />
 <img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
-
 <p style="margin-bottom: 20px"> Squad
 </p>
+
+
+<img src="images/iconset.png" style="margin-bottom: 10px;" height="150" width="390">
+<p style="margin-bottom: 20px"> Part of a set of icons I created for my project
+</p>
+
+
+
+
 
 </body>
 </html>
