--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class= "four columns">
                           <!-- <a href="iqvia"> -->
 
-                          <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png">
+                          <!-- <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png"> -->
                         </a>
                         </div>
                         <div class="six offset-by-two columns" >
