--- a/index.html
+++ b/index.html
@@ -94,6 +94,37 @@
 
 
 
+          <!-- <div class="section-work" style="background-color:#FCFCFC">
+                <div class="container">
+                  <div class="row">
+                    <div id="portfolio" class="twelve column">
+                      <div class="row card" style="margin-top:40px;">
+                        <div class= "four columns">
+                          <!-- <a href="iqvia"> -->
+
+                          <!-- <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png"> -->
+                        <!-- </a>
+                        </div>
+                        <div class="six offset-by-two columns" >
+                            <h5 class="u-dark" style="margin-bottom: 10px">CountOn</h5>
+                          <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
+                          </h6>
+                          <h6 style="margin-bottom: 20px"> Countdown app for a class  </h6>
+                          <h6 style="margin-bottom: 20px">Coming soon.
+                          </h6>
+
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div> -->
+
+
+
+
+
+
 
           <div class="section-work" style="background-color:#FCFCFC">
                 <div class="container">
@@ -107,10 +138,10 @@
                         </a>
                         </div>
                         <div class="six offset-by-two columns" >
-                            <h5 class="u-dark" style="margin-bottom: 10px">School Work</h5>
+                            <h5 class="u-dark" style="margin-bottom: 10px">CountOn</h5>
                           <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                           </h6>
-                          <h6 style="margin-bottom: 20px"> Projects from Human-Computer Interaction, User Experience + Software Engineering Studio, and more.  </h6>
+                          <h6 style="margin-bottom: 20px"> Countdown app for a class  </h6>
                           <h6 style="margin-bottom: 20px">Coming soon.
                           </h6>
 
@@ -238,7 +269,7 @@
               <div class= "four columns">
 
                 <a href="cusd">
-                <img class="mockup" src="images/cusd.png">
+                <img class="mockup" src="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">
 
               </a>
               </div>
