--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <h5 class="u-dark" style="margin-bottom: 10px">IQVIA Hackathon</h5>
                           <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                           </h6>
-                          <h6 style="margin-bottom: 20px"> VIA.  </h6>
+                          <h6 style="margin-bottom: 20px"> VIA - A concept that bridges patient and provider.  </h6>
                           <h6 style="margin-bottom: 20px">Report coming soon.
                           </h6>
 
