--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 
 
-          <div class="section-work" style="background-color:#FCFCFC">
+          <!-- <div class="section-work" style="background-color:#FCFCFC">
                 <div class="container">
                   <div class="row">
                     <div id="portfolio" class="twelve column">
@@ -135,7 +135,7 @@
                           <!-- <a href="iqvia"> -->
 
                           <!-- <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png"> -->
-                        </a>
+                        <!-- </a>
                         </div>
                         <div class="six offset-by-two columns" >
                             <h5 class="u-dark" style="margin-bottom: 10px">CountOn</h5>
@@ -150,7 +150,7 @@
                     </div>
                     </div>
                     </div>
-                    </div>
+                    </div> --> 
 
 
 
