--- a/via.html
+++ b/via.html
@@ -53,7 +53,7 @@
 <div class="header"><h3>IQVIA</h3></div>
 <div class="info"
 <p>
-  This summer I had the opportunity to work at IQVIA as a UX Engineer Intern. Through my 10 week internship I worked on various projects, participated in a hackathon, and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
+  This summer I had the privilege to work at IQVIA as a UX Engineer Intern. Through my 10 week internship I worked on various projects, participated in a hackathon , and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
 
   Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
 </p>
@@ -61,7 +61,7 @@
 
 
 
-<br />
+<!-- <br />
 <img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
 <p style="margin-bottom: 20px"> Squad
 </p>
@@ -69,7 +69,7 @@
 
 <img src="images/iconset.png" style="margin-bottom: 10px;" height="150" width="390">
 <p style="margin-bottom: 20px"> Part of a set of icons I created for my project
-</p>
+</p> -->
 
 
 
