--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <div class= "four columns">
 
                 <a href="cusd">
-                <img class="mockup" src="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">
+                <img class="mockup" src="images/cusd.png">
 
               </a>
               </div>
