--- a/via.html
+++ b/via.html
@@ -53,13 +53,22 @@
 <div class="header"><h3>IQVIA</h3></div>
 <div class="info"
 <p>
-  This summer I had the privilege to work at IQVIA as a UX Engineer Intern. Through my 10 week internship I worked on various projects, participated in a hackathon , and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
+  During my internship at IQVIA, there was a hackathon that I participated in Through my 10 week internship I worked on various projects, participated in a hackathon , and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
 
-  Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
 </p>
 
 
-
+<h3>Use Cases</h3>
+<li> Security
+model learns from user’s data and prevents collecting false data.
+Clinical trials:
+can find trials you are eligible for; a second opinion for treatments
+Early detection
+can alert physician of trends that may indicate health issues
+Building/teaching the model
+IQVIA will have less biased data, in part because of Virtual Trials
+Model is trained with lifestyle data in addition to past research
+No current regulations on the use of AI in healthcare</li>
 
 <!-- <br />
 <img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
