--- a/index.html
+++ b/index.html
@@ -150,8 +150,34 @@
                     </div>
                     </div>
                     </div>
-                    </div> --> 
+                    </div> -->
 
+
+                              <div class="section-work" style="background-color:#FCFCFC">
+                                    <div class="container">
+                                      <div class="row">
+                                        <div id="portfolio" class="twelve column">
+                                          <div class="row card" style="margin-top:40px;">
+                                            <div class= "four columns">
+                                              <!-- <a href="iqvia"> -->
+
+                                              <img style="margin-bottom: 10px;" height="290" width="220" src="images/projtracker3.png">
+                                            </a>
+                                            </div>
+                                            <div class="six offset-by-two columns" >
+                                                <h5 class="u-dark" style="margin-bottom: 10px">INFO 4340</h5>
+                                              <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
+                                              </h6>
+                                              <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
+                                              <h6 style="margin-bottom: 20px">Report coming soon.
+                                              </h6>
+
+                                            </div>
+                                          </div>
+                                        </div>
+                                        </div>
+                                        </div>
+                                        </div>
 
 
 
@@ -170,7 +196,7 @@
                             <h5 class="u-dark" style="margin-bottom: 10px">IQVIA Hackathon</h5>
                           <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                           </h6>
-                          <h6 style="margin-bottom: 20px"> VIA - A concept that bridges patient and provider.  </h6>
+                          <h6 style="margin-bottom: 20px"> VIA - A concept that bridges the patient and provider.  </h6>
                           <h6 style="margin-bottom: 20px">Report coming soon.
                           </h6>
 
