--- a/index.html
+++ b/index.html
@@ -152,6 +152,55 @@
                     </div>
                     </div> -->
 
+                    <div class="section-work" style="background-color:#FCFCFC">
+                          <div class="container">
+                            <div class="row">
+                              <div id="portfolio" class="twelve column">
+                                <div class="row card" style="margin-top:40px;">
+                                  <div class= "four columns">
+                                    <!-- <a href="iqvia"> -->
+
+                                    <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
+                                  </a>
+                                  </div>
+                                  <div class="six offset-by-two columns" >
+                                      <h5 class="u-dark" style="margin-bottom: 10px">INFO 3450 - Giving Tree</h5>
+                                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
+                                    </h6>
+                                    <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
+                                      <a class="button" href="https://jc2747-homework-05.herokuapp.com/">View</a>
+
+                                  </div>
+                                </div>
+                              </div>
+                              </div>
+                              </div>
+                              </div>
+
+                    <div class="section-work" style="background-color:#FCFCFC">
+                          <div class="container">
+                            <div class="row">
+                              <div id="portfolio" class="twelve column">
+                                <div class="row card" style="margin-top:40px;">
+                                  <div class= "four columns">
+                                    <!-- <a href="iqvia"> -->
+
+                                    <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
+                                  </a>
+                                  </div>
+                                  <div class="six offset-by-two columns" >
+                                      <h5 class="u-dark" style="margin-bottom: 10px">INFO 4340 - Countdown</h5>
+                                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
+                                    </h6>
+                                    <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
+                                      <a class="button" href="https://jc2747-homework-05.herokuapp.com/">View</a>
+
+                                  </div>
+                                </div>
+                              </div>
+                              </div>
+                              </div>
+                              </div>
 
                               <div class="section-work" style="background-color:#FCFCFC">
                                     <div class="container">
@@ -165,12 +214,11 @@
                                             </a>
                                             </div>
                                             <div class="six offset-by-two columns" >
-                                                <h5 class="u-dark" style="margin-bottom: 10px">INFO 4340</h5>
+                                                <h5 class="u-dark" style="margin-bottom: 10px">INFO 4340 - Project Tracker</h5>
                                               <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                                               </h6>
                                               <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
-                                              <h6 style="margin-bottom: 20px">Report coming soon.
-                                              </h6>
+                                              <a class="button" href="projtracker.html">View</a>
 
                                             </div>
                                           </div>
