--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                     </div>
                     </div> -->
 
-                    <div class="section-work" style="background-color:#FCFCFC">
+                  <!--  <div class="section-work" style="background-color:#FCFCFC">
                           <div class="container">
                             <div class="row">
                               <div id="portfolio" class="twelve column">
                                 <div class="row card" style="margin-top:40px;">
                                   <div class= "four columns">
-                                    <!-- <a href="iqvia"> -->
+                                    <!-- <a href="iqvia">
 
                                     <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
                                   </a>
@@ -167,7 +167,7 @@
                                       <h5 class="u-dark" style="margin-bottom: 10px">INFO 3450 - Giving Tree</h5>
                                     <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                                     </h6>
-                                    <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
+                                    <h6 style="margin-bottom: 20px"> Personal project tracker app.  </h6>
                                       <a class="button" href="https://jc2747-homework-05.herokuapp.com/">View</a>
 
                                   </div>
@@ -183,7 +183,7 @@
                               <div id="portfolio" class="twelve column">
                                 <div class="row card" style="margin-top:40px;">
                                   <div class= "four columns">
-                                    <!-- <a href="iqvia"> -->
+                                    <!-- <a href="iqvia"> 
 
                                     <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
                                   </a>
@@ -200,7 +200,7 @@
                               </div>
                               </div>
                               </div>
-                              </div>
+                            </div> -->
 
                               <div class="section-work" style="background-color:#FCFCFC">
                                     <div class="container">
