--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                               <div id="portfolio" class="twelve column">
                                 <div class="row card" style="margin-top:40px;">
                                   <div class= "four columns">
-                                    <!-- <a href="iqvia"> 
+                                    <!-- <a href="iqvia">
 
                                     <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
                                   </a>
@@ -218,7 +218,7 @@
                                               <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                                               </h6>
                                               <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
-                                              <a class="button" href="projtracker.html">View</a>
+                                              <a class="button" href="https://tm-project-tracker.herokuapp.com/">View</a>
 
                                             </div>
                                           </div>
