--- a/projtracker.html
+++ b/projtracker.html
@@ -42,7 +42,7 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
-            <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
+            <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="photography">Photography</a></li>
 
         </div>
@@ -61,7 +61,7 @@ Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I
 <h4>User Research</h4>
 <br />
 <p>
-We selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track. From there we created personas to help us refine and focus our design.
+We selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track: <span style = "font-weight:bold"> Guitar-playing, weight-lifting, and quitting vaping</span>. From there we created personas to help us refine and focus our design.
 </p>
 <div class = "row">
 
@@ -177,8 +177,7 @@ While it does take some of the user’s time to input their entry, we designed t
 <p> We used Vue, custom CSS, JSON and Javascript to implement the app</p>
 
 <br /><br />
-<h5>Check out the live site: <a href="https://tm-project-tracker.herokuapp.com">Project Tracker</a> </h5>
-<p>Best experienced through mobile!</p>
+<h5>Check out the live site available on mobile: <a href="https://tm-project-tracker.herokuapp.com">Project Tracker</a> </h5>
 
 
 <!-- scoped means only affects this page -->
