--- a/via.html
+++ b/via.html
@@ -42,7 +42,7 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
-            <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
+            <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="photography">Photography</a></li>
 
         </div>
@@ -69,6 +69,9 @@ Building/teaching the model
 IQVIA will have less biased data, in part because of Virtual Trials
 Model is trained with lifestyle data in addition to past research
 No current regulations on the use of AI in healthcare</li>
+
+
+<iframe src="https://onedrive.live.com/embed?cid=2564511D32F4B59A&resid=2564511D32F4B59A%21106&authkey=ADczl3xZF9ZARmY&em=2" width="402" height="327" frameborder="0" scrolling="no"></iframe>
 
 <!-- <br />
 <img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
