--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
-            <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
+            <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
           <li class="u-grey"><a href="photography">Photography</a></li>
 
           </ul>
