--- a/projtracker.html
+++ b/projtracker.html
@@ -132,30 +132,41 @@ Through our interviews with potential users, we found patterns in what they had 
 
 <b>Notebook / Pen & Paper</b>
   * Costs:
-    - Our app is more successful and more lightweight because you don’t have to carry around a notebook, can sync wirelessly with computer, phone, etc. View entries in multiple formats (example: visuals). Cheaper than notebook? Fast to type than write.
+  <div class="myDivElement">
+  <ul class = "right">
+    <li> Our app is more successful and more lightweight because you don’t have to carry around a notebook, can sync wirelessly with computer, phone, etc.  </li>
+      <li> View entries in multiple formats (example: visuals). Cheaper than notebook. Fast to type than write. </li>
   * Benefits:
-    - 100% “customizable” -- up to you how you want to structure tracking
+    <li> 100% “customizable” -- up to you how you want to structure tracking </li>   </ul>
+</div>
 
-</b>Major competitor: Nomie</b>
-  * Costs:
-    - The sophisticated features of Nomie cost money, while our app is free.
-    - Nomie is not as customizable, it takes a one size fits all approach.
-    - UI is overcomplicated, can deter user
+
+  <div class="myDivElement">
+<b>Major competitor: Nomie</b>
+  <p>Costs: </p>
+  <ul class = "right">
+    <li> The sophisticated features of Nomie cost money, while our app is free. </li>
+    <li> Nomie is not as customizable, it takes a one size fits all approach. </li>
+    <li> UI is overcomplicated, can deter user</li>
   * Benefits:
-    - Has advanced features like Face ID
+      <li>  Has advanced features like Face ID   </li> </ul>
+</div>
 
-**Nothing (No Tracking):**
+
+<b>Nothing (No Tracking): </b>
   * Costs:
-    - Our app makes it easy to track everything that would be otherwise difficult to remember in your head
-    - Our app gives a quick, easy visualization of progress that would not be available to those who track nothing
-    - Our app incentivizes users to complete their tasks and continue documenting, whereas with no tracking, you would have much less incentive to complete your goal
+  <ul>
+    <li> Our app makes it easy to track everything that would be otherwise difficult to remember in your head </li>
+    <li>  Our app gives a quick, easy visualization of progress that would not be available to those who track nothing </li>
+    <li>  Our app incentivizes users to complete their tasks and continue documenting, whereas with no tracking, you would have much less incentive to complete your goal </li>
   * Benefits:
-    - Doing nothing takes less effort, but will probably reap fewer results
+    <li>  Doing nothing takes less effort, but will probably reap fewer results </li> </ul>
 
-**Google Calendars:**
+<b>Google Calendars:</b>
   * Costs:
-    - Our app provides the ability to add context through notes and specific measurements as opposed to a single event like in Google Calendar
-    - Our app incentivizes user to accomplish and continue documents their tasks while Google Calendar has no such feature
+  <ul>
+    <li>  Our app provides the ability to add context through notes and specific measurements as opposed to a single event like in Google Calendar </li>
+    <li>  Our app incentivizes user to accomplish and continue documents their tasks while Google Calendar has no such feature </li>
 </p>
 
 
