--- a/projtracker.html
+++ b/projtracker.html
@@ -102,6 +102,7 @@ We selected target audiences we had physical access to and brainstormed 3 differ
 <p>
 Through our interviews with potential users, we found patterns in what they had to say:
 </p>
+<br />
 
 
 <div class="myDivElement">
@@ -121,53 +122,42 @@ Through our interviews with potential users, we found patterns in what they had 
 
 
 
-<br /><br />
+<br />
 <h4>Market Research</h4>
 <br />
-<p>
-</ul>
-
-
-
 
 <b>Notebook / Pen & Paper</b>
-  * Costs:
   <div class="myDivElement">
   <ul class = "right">
     <li> Our app is more successful and more lightweight because you don’t have to carry around a notebook, can sync wirelessly with computer, phone, etc.  </li>
       <li> View entries in multiple formats (example: visuals). Cheaper than notebook. Fast to type than write. </li>
-  * Benefits:
     <li> 100% “customizable” -- up to you how you want to structure tracking </li>   </ul>
 </div>
 
-
-  <div class="myDivElement">
 <b>Major competitor: Nomie</b>
-  <p>Costs: </p>
+  <div class="myDivElement">
   <ul class = "right">
     <li> The sophisticated features of Nomie cost money, while our app is free. </li>
     <li> Nomie is not as customizable, it takes a one size fits all approach. </li>
     <li> UI is overcomplicated, can deter user</li>
-  * Benefits:
       <li>  Has advanced features like Face ID   </li> </ul>
 </div>
 
-
 <b>Nothing (No Tracking): </b>
-  * Costs:
-  <ul>
+  <div class="myDivElement">
+  <ul class = "right">
     <li> Our app makes it easy to track everything that would be otherwise difficult to remember in your head </li>
     <li>  Our app gives a quick, easy visualization of progress that would not be available to those who track nothing </li>
     <li>  Our app incentivizes users to complete their tasks and continue documenting, whereas with no tracking, you would have much less incentive to complete your goal </li>
-  * Benefits:
     <li>  Doing nothing takes less effort, but will probably reap fewer results </li> </ul>
+</div>
 
 <b>Google Calendars:</b>
-  * Costs:
-  <ul>
+  <div class="myDivElement">
+  <ul class = "right">
     <li>  Our app provides the ability to add context through notes and specific measurements as opposed to a single event like in Google Calendar </li>
     <li>  Our app incentivizes user to accomplish and continue documents their tasks while Google Calendar has no such feature </li>
-</p>
+</div>
 
 
 <br /><br />
