--- a/projtracker.html
+++ b/projtracker.html
@@ -156,7 +156,7 @@ Through our interviews with potential users, we found patterns in what they had 
   <div class="myDivElement">
   <ul class = "right">
     <li>  Our app provides the ability to add context through notes and specific measurements as opposed to a single event like in Google Calendar </li>
-    <li>  Our app incentivizes user to accomplish and continue documents their tasks while Google Calendar has no such feature </li>
+    <li>  Our app incentivizes user to accomplish and continue documents their tasks while Google Calendar has no such feature </li> </ul>
 </div>
 
 
@@ -201,7 +201,7 @@ While it does take some of the user’s time to input their entry, we designed t
 <style scoped>
 
 .right{
-  padding-left: 50px;
+  padding-left: 400px;
   text-align: left;
 }
 
@@ -209,7 +209,7 @@ While it does take some of the user’s time to input their entry, we designed t
 
 .myDivElement{
   display: flex;
-   justify-content: center;
+   /* justify-content: center; */
    width: 100%;
 }
 
