--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                               <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                                               </h6>
                                               <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
-                                              <a class="button" href="https://tm-project-tracker.herokuapp.com/">View</a>
+                                              <a class="button" href="projtracker.html">View</a>
 
                                             </div>
                                           </div>
