--- a/projtracker.html
+++ b/projtracker.html
@@ -206,6 +206,13 @@ While it does take some of the user’s time to input their entry, we designed t
 }
 
 
+@media only screen and (max-width: 600px) {
+.right{
+  padding-left: 0;
+}
+}
+
+
 
 .myDivElement{
   display: flex;
