--- a/projtracker.html
+++ b/projtracker.html
@@ -190,7 +190,7 @@ While it does take some of the user’s time to input their entry, we designed t
 <br /><br />
 <h4>Final Product</h4>
 <br />
-<img src ="images/screens.png" style="width:900px">
+<img class = "screens" src ="images/screens.png">
 <p> We used Vue, custom CSS, JSON and Javascript to implement the app</p>
 
 <br /><br />
@@ -209,6 +209,19 @@ While it does take some of the user’s time to input their entry, we designed t
 @media only screen and (max-width: 600px) {
 .right{
   padding-left: 0;
+}
+}
+
+
+
+.screens{
+  width:900px;
+}
+
+
+@media only screen and (max-width: 600px) {
+.screens{
+  width: 290px;
 }
 }
 
